fixed minor my-events layout issue

--- a/src/main/web/src/app/user/my-tours/entry/my-tours-entry.component.scss
+++ b/src/main/web/src/app/user/my-tours/entry/my-tours-entry.component.scss
@@ -40,6 +40,7 @@
 			flex-direction: column;
 			justify-content: flex-start;
 			align-items: center;
+			min-width: 40px;
 
 			&:not(.past-event) {
 				.event-date-top {
